--- a/src/main/webapp/opd/opd_bill.xhtml
+++ b/src/main/webapp/opd/opd_bill.xhtml
@@ -400,14 +400,14 @@
                                         <div class="col-md-4" >
                                             <h:panelGroup id="gpLocalForeign"  class="col-md-6" >
                                                 <p:commandButton value="Mark Foreigner" 
-                                                                 class="mx-1"
+                                                                 class="mx-2"
                                                                  action="#{opdBillController.markAsForeigner}" 
                                                                  rendered="#{!opdBillController.foreigner}" 
                                                                  process="@this" 
                                                                  update="gpLocalForeign :#{p:resolveFirstComponentWithId('pBillDetails',view).clientId} :#{p:resolveFirstComponentWithId('creditCompany',view).clientId} :#{p:resolveFirstComponentWithId('creditStaff',view).clientId}  tblBillItem paymentDetails" 
                                                                  ></p:commandButton>
                                                 <p:commandButton value="Mark Local" 
-                                                                 class="mx-1"
+                                                                 class="mx-2"
                                                                  action="#{opdBillController.markAsLocal}" 
                                                                  rendered="#{opdBillController.foreigner}" 
                                                                  process="@this" 
@@ -461,36 +461,36 @@
                                                                actionListener="#{doctorController.prepareAdd}" 
                                                                process="btnAddNewDoc" 
                                                                update="#{p:resolveFirstComponentWithId('panDoc',view).clientId}" />  
-                                                <p:dialog id="panDoc" header="Add New Doctor" widgetVar="dlg" resizable="false" modal="true">  
+                                                <p:dialog id="panDoc" header="Add New Doctor" widgetVar="dlg" resizable="false" modal="true" class="p-2" showEffect="fade"  width="450">  
                                                     <h:panelGrid columns="2" >  
                                                         <p:outputLabel id="lblNameD" value="Name" ></p:outputLabel>
-                                                        <h:inputText autocomplete="off" id="txtNameD"  value="#{doctorController.current.person.name}"  ></h:inputText>
+                                                        <p:inputText autocomplete="off" id="txtNameD"  value="#{doctorController.current.person.name}"  ></p:inputText>
                                                         <p:outputLabel id="lblPhoneD" value="Phone" ></p:outputLabel>
-                                                        <h:inputText autocomplete="off" id="txtPhoneD" value="#{doctorController.current.person.phone}"  ></h:inputText>
+                                                        <p:inputText autocomplete="off" id="txtPhoneD" value="#{doctorController.current.person.phone}"  ></p:inputText>
                                                         <p:outputLabel id="lblFaxD" value="Fax" ></p:outputLabel>
-                                                        <h:inputText autocomplete="off" id="txtFaxD" value="#{doctorController.current.person.fax}"  ></h:inputText>
+                                                        <p:inputText autocomplete="off" id="txtFaxD" value="#{doctorController.current.person.fax}"  ></p:inputText>
                                                         <p:outputLabel id="lblMobileD" value="Mobile" ></p:outputLabel>
-                                                        <h:inputText autocomplete="off" id="txtMobileD" value="#{doctorController.current.person.mobile}"  ></h:inputText>
+                                                        <p:inputText autocomplete="off" id="txtMobileD" value="#{doctorController.current.person.mobile}"  ></p:inputText>
                                                         <p:outputLabel id="lblAddressD" value="Address" ></p:outputLabel>
-                                                        <h:inputText autocomplete="off" id="txtAddressD" value="#{doctorController.current.person.address}"  ></h:inputText>
+                                                        <p:inputText autocomplete="off" id="txtAddressD" value="#{doctorController.current.person.address}"  ></p:inputText>
                                                         <p:outputLabel value="Code"></p:outputLabel>   
-                                                        <h:inputText autocomplete="off" id="txtCodeD" value="#{doctorController.current.code}"  ></h:inputText>
+                                                        <p:inputText autocomplete="off" id="txtCodeD" value="#{doctorController.current.code}"  ></p:inputText>
                                                         <p:outputLabel value="Speciality" ></p:outputLabel>
                                                         <p:selectOneMenu id="cmbSpecialityD" value="#{doctorController.current.speciality}" >
                                                             <f:selectItem itemLabel="Please select a speciality"/>
                                                             <f:selectItems value="#{doctorSpecialityController.items}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
                                                         </p:selectOneMenu>
                                                         <p:outputLabel id="lblRegD" value="Registration" ></p:outputLabel>
-                                                        <h:inputText autocomplete="off" id="txtRegD" value="#{doctorController.current.registration}"  ></h:inputText>                 
+                                                        <p:inputText autocomplete="off" id="txtRegD" value="#{doctorController.current.registration}"  ></p:inputText>                 
                                                         <p:outputLabel id="lblQuaD" value="Qualification" ></p:outputLabel>
-                                                        <h:inputText autocomplete="off" id="txtQuaD" value="#{doctorController.current.qualification}"  ></h:inputText>   
+                                                        <p:inputText autocomplete="off" id="txtQuaD" value="#{doctorController.current.qualification}"  ></p:inputText>   
 
                                                         <p:commandButton 
                                                             id="btnDocSave" 
                                                             value="Add New" 
                                                             process="btnDocSave panDoc" 
 
-                                                            update="panDoc :#{p:resolveFirstComponentWithId('cmbDoc',view).clientId}" actionListener="#{doctorController.saveSelected()}" styleClass="buttons" oncomplete="dlg.hide();">
+                                                            update="msg panDoc :#{p:resolveFirstComponentWithId('cmbDoc',view).clientId}" actionListener="#{doctorController.saveSelected()}" styleClass="buttons" oncomplete="dlg.hide();">
                                                         </p:commandButton>
                                                     </h:panelGrid>  
                                                 </p:dialog> 
@@ -581,11 +581,10 @@
                                                              completeMethod="#{staffController.completeStaff}" 
                                                              var="mys" 
                                                              class="w-100"
-                                                             placeholder="Type at least 3 letters to search"
+                                                             placeholder="Type at least 4 letters to search"
                                                              inputStyleClass="form-control"
                                                              itemLabel="#{mys.person.nameWithTitle}" 
                                                              itemValue="#{mys}"
-
                                                              size="10">
                                                 <p:column headerText="Name" >
                                                     <h:outputText value="#{mys.person.nameWithTitle}" ></h:outputText>
