Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/opd/patient.xhtml
+++ b/src/main/webapp/opd/patient.xhtml
@@ -130,9 +130,11 @@
                                 </p:commandButton>
                                 <p:commandButton 
                                     value="Accept Payments" 
-                                    action="#{patientController.navigateToPatientAcceptPayment}" 
+                                    action="#{searchController.navigateToPatientAcceptPayment()}" 
                                     ajax="false" 
                                     styleClass="mx-2">
+                                    <f:setPropertyActionListener value="#{patientController.current}"
+                                                                 target="#{searchController.patient}" ></f:setPropertyActionListener>
                                 </p:commandButton>
                                 <p:commandButton 
                                     value="Refunds"
