Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/opd/patient.xhtml
+++ b/src/main/webapp/opd/patient.xhtml
@@ -144,10 +144,13 @@
                                 </p:commandButton>
                                 <p:commandButton 
                                     value="Lab Reports"
-                                    action="#{patientController.navigateToPatientLabReports}"
+                                    action="#{searchController.navigateToPatientLabReports}"
                                     ajax="false"
                                     styleClass="mx-2">
+                                    <f:setPropertyActionListener value="#{patientController.current}"
+                                                                 target="#{searchController.patient}" ></f:setPropertyActionListener>
                                 </p:commandButton>
+                               
                                 <p:commandButton value="Inward Appointments"
                                                  action="#{patientController.navigateToInwardAppointmentFromPatientProfile()}"
                                                  ajax="false"
