--- a/src/main/webapp/inward/inward_room_change.xhtml
+++ b/src/main/webapp/inward/inward_room_change.xhtml
@@ -63,6 +63,7 @@
                             <p:commandButton 
                                 style="float: right;"
                                 ajax="false"
+                                value="Patient Lookup"
                                 icon="fa fa-search"
                                 class="ui-button-warning " 
                                 action="#{patientController.navigateToSearchPatients()}" 
@@ -72,6 +73,7 @@
                                 style="float: right;"
                                 ajax="false"
                                 icon="fa fa-user"
+                                value="Patient Profile"
                                 class="ui-button-warning mx-1" 
                                 action="#{patientController.navigateToOpdPatientProfile()}" 
                                 >
@@ -84,7 +86,8 @@
                                 ajax="false"
                                 icon="fa-solid fa-address-card"
                                 class="ui-button-secondary " 
-                                action="/inward/admission_profile.xhtml" 
+                                value="Inpatient Dashboard"
+                                action="#{admissionController.navigateToAdmissionProfilePage}" 
                                 >
                             </p:commandButton>
                         </h:panelGrid>
