--- a/src/main/webapp/emr/patient_search.xhtml
+++ b/src/main/webapp/emr/patient_search.xhtml
@@ -116,7 +116,10 @@
                                         <div class="row g-2">
                                             <!-- Your p:commandButton elements here wrapped in col divs -->
                                             <div class="col-auto m-2 ">
-                                                <p:commandButton value="Profile" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-2 mb-2">
+                                                <p:commandButton 
+                                                    value="Profile" 
+                                                    action="#{patientController.toEmrPatientProfile()}" 
+                                                    ajax="false" styleClass="mx-2 mb-2">
                                                     <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
                                                 </p:commandButton>
                                                 <p:commandButton 
