--- a/src/main/webapp/resources/ezcomp/common/patient_details.xhtml
+++ b/src/main/webapp/resources/ezcomp/common/patient_details.xhtml
@@ -4,7 +4,8 @@
       xmlns:cc="http://xmlns.jcp.org/jsf/composite"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <!-- INTERFACE -->
     <cc:interface>
@@ -47,7 +48,6 @@
 
                 </h:panelGroup>
             </f:facet>
-
             <h:panelGroup id="gpPatient" >
                 <div class="row">
                     <div class="col-md-3 p-1">
@@ -72,8 +72,10 @@
                             value="#{cc.attrs.patient.person.name}"
                             validatorMessage="Please enter only letters and spaces."
                             class="form-control" >
-                            <f:validateRegex pattern="^[a-zA-Z.\s]*$" />
-                            
+                            <c:if test="#{not empty sessionController.applicationPreference.nameRegex}">
+                                <f:validateRegex pattern="#{sessionController.applicationPreference.nameRegex}"/>
+                            </c:if>
+
                         </p:inputText>
                     </div>
                 </div>
@@ -147,7 +149,9 @@
                             value="#{cc.attrs.patient.person.mobile}"
                             class="form-control" 
                             validatorMessage="Please enter valid Number">
-                            <f:validateRegex pattern="^[0-9\s\+-]*$" />
+                            <c:if test="#{not empty sessionController.applicationPreference.mobileRegex}">
+                                <f:validateRegex pattern="#{sessionController.applicationPreference.mobileRegex}"/>
+                            </c:if>
                         </p:inputText>
                     </div>
                     <div class="col-md-3 p-1">
@@ -158,7 +162,9 @@
                             placeholder="Phone Number"
                             value="#{cc.attrs.patient.person.phone}"
                             class="form-control" validatorMessage="Please enter valid Number">
-                            <f:validateRegex pattern="^[0-9\s\+-]*$" />
+                            <c:if test="#{not empty sessionController.applicationPreference.mobileRegex}">
+                                <f:validateRegex pattern="#{sessionController.applicationPreference.mobileRegex}"/>
+                            </c:if>
                         </p:inputText>
                     </div>
                     <div class="col-md-3 p-1">
@@ -167,8 +173,11 @@
                             autocomplete="off" id="txtEmail" placeholder="Enter Email here"
                             value="#{cc.attrs.patient.person.email}"
                             class="form-control"
-                        >
-                             
+                            >
+                            <c:if test="#{not empty sessionController.applicationPreference.emailRegex}">
+                                <f:validateRegex pattern="#{sessionController.applicationPreference.emailRegex}"/>
+                            </c:if>
+
                         </p:inputText>
                     </div>
                     <div class="col-md-3 p-1">
