--- a/src/main/webapp/emr/patient_profile.xhtml
+++ b/src/main/webapp/emr/patient_profile.xhtml
@@ -552,11 +552,145 @@
                                                             </p:column>                         
                                                         </p:dataTable>
                                                     </div>
+
                                                     <div class="col-6">
-                                                        
+                                                        <p:dataTable 
+                                                            class="mt-4" 
+                                                            id="tblInves"
+                                                            value="#{patientEncounterController.investigations}" 
+                                                            var="pi" 
+                                                            rowIndexVar="#{pi.id}" >
+                                                            <f:facet name="header" >
+                                                                <h:outputLabel value="Patient Investigation" ></h:outputLabel>
+                                                            </f:facet>
+                                                            <p:column  headerText="No" styleClass="alignTop" >
+                                                                <p:outputLabel value="#{i+1}" />
+                                                            </p:column>
+                                                            <p:column  headerText="Bill" styleClass="alignTop" >
+                                                                <h:outputLabel id="lblBillNo" 
+                                                                               value="#{pi.billItem.bill.insId}" 
+                                                                               styleClass="#{pi.billItem.bill.cancelled or pi.billItem.transRefund ? 'redtext':''}"></h:outputLabel>
+                                                                <p:tooltip for="lblBillNo"  >
+                                                                    <h:outputLabel value="Bill No : #{pi.billItem.bill.insId}" ></h:outputLabel>
+                                                                    <br/>
+                                                                    <h:outputLabel value="Billed From : #{pi.billItem.bill.institution.name}" ></h:outputLabel>
+                                                                    <br/>
+                                                                    <h:outputLabel value="Sampled : " />
+                                                                    <h:outputLabel rendered="#{pi.collected}" value="#{pi.sampledAt}" >
+                                                                        <f:convertDateTime pattern="dd/MMM/yyyy - hh:mm a"/>
+                                                                    </h:outputLabel>
+                                                                    <br/>
+                                                                    <h:outputLabel value="Received : " />
+                                                                    <h:outputLabel rendered="#{pi.received}" value="#{pi.receivedAt}" >
+                                                                        <f:convertDateTime pattern="dd/MMM/yyyy - hh:mm a"/>
+                                                                    </h:outputLabel>
+                                                                    <br/>
+                                                                    <h:panelGroup rendered="#{pi.billItem.bill.cancelled}" >
+                                                                        <h:outputLabel style="color: red;" value="Cancelled : " />
+                                                                        <h:outputLabel style="color: red;" rendered="#{pi.billItem.bill.cancelled}" value="#{pi.billItem.bill.cancelledBill.createdAt}" >
+                                                                            <f:convertDateTime pattern="dd/MMM/yyyy - hh:mm a"/>
+                                                                        </h:outputLabel>
+                                                                    </h:panelGroup>
+                                                                    <h:panelGroup rendered="#{pi.billItem.refunded}" >
+                                                                        <h:outputLabel style="color: red;" value="Refunded : " />
+                                                                        <h:outputLabel style="color: red;" rendered="#{pi.billItem.refunded}" value="#{pi.billItem.referanceBillItem.bill.createdAt}" >
+                                                                            <f:convertDateTime pattern="dd/MMM/yyyy - hh:mm a"/>
+                                                                        </h:outputLabel>
+                                                                    </h:panelGroup>
+
+
+                                                                </p:tooltip>
+                                                            </p:column>
+
+                                                            <p:column  headerText="Dep ID" styleClass="alignTop" >
+                                                                <h:outputLabel id="lblInvNo" 
+                                                                               value="#{pi.billItem.bill.deptId}" 
+                                                                               styleClass="#{pi.billItem.bill.cancelled or pi.billItem.transRefund ? 'redtext':''}"></h:outputLabel>
+                                                                <p:tooltip for="lblBillNo"  >
+                                                                    <h:outputLabel value="Bill No : #{pi.billItem.bill.deptId}" ></h:outputLabel>
+                                                                    <br/>
+                                                                    <h:outputLabel value="Billed From : #{pi.billItem.bill.institution.name}" ></h:outputLabel>
+                                                                    <br/>
+                                                                    <h:outputLabel value="Sampled : " />
+                                                                    <h:outputLabel rendered="#{pi.collected}" value="#{pi.sampledAt}" >
+                                                                        <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
+                                                                    </h:outputLabel>
+                                                                    <br/>
+                                                                    <h:outputLabel value="Received : " />
+                                                                    <h:outputLabel rendered="#{pi.received}" value="#{pi.receivedAt}" >
+                                                                        <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
+                                                                    </h:outputLabel>
+                                                                    <br/>
+                                                                    <h:panelGroup rendered="#{pi.billItem.bill.cancelled}" >
+                                                                        <h:outputLabel style="color: red;" value="Cancelled : " />
+                                                                        <h:outputLabel style="color: red;" rendered="#{pi.billItem.bill.cancelled}" value="#{pi.billItem.bill.cancelledBill.createdAt}" >
+                                                                            <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
+                                                                        </h:outputLabel>
+                                                                    </h:panelGroup>
+                                                                    <h:panelGroup rendered="#{pi.billItem.refunded eq true}" >
+                                                                        <h:outputLabel style="color: red;" value="Refunded : " />
+                                                                        <h:outputLabel style="color: red;" rendered="#{pi.billItem.refunded eq true}" value="#{pi.billItem.referanceBillItem.bill.createdAt}" >
+                                                                            <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
+                                                                        </h:outputLabel>
+                                                                    </h:panelGroup>
+                                                                </p:tooltip>
+                                                            </p:column>
+
+
+                                                            <p:column headerText="Investigation"  styleClass="alignTop" >
+                                                                <h:outputLabel value="#{pi.billItem.item.name}" >
+                                                                </h:outputLabel>
+
+                                                            </p:column>
+
+                                                            <p:column headerText="Billed for"  styleClass="alignTop">
+                                                                <h:outputLabel value="#{pi.billItem.bill.toDepartment.name}" >
+                                                                </h:outputLabel>
+                                                            </p:column>
+                                                            <p:column headerText="Data-Entered Reports"  styleClass="alignTop noBorderGrid" >
+
+                                                                <h:dataTable value="#{pi.patientReports}" var="dpr" rendered="#{pi.patientReports.size() ne 0}"  styleClass="noBorderGrid" >
+                                                                    <h:column >
+
+                                                                        <h:panelGrid columns="6" styleClass="noBorderGrid">
+
+                                                                            <p:commandLink id="cmdOldReportPrint" ajax="false" action="/lab/patient_report_print">
+                                                                                <p:graphicImage library="image" name="print.jpg" styleClass="standedicon" ></p:graphicImage>
+                                                                                <f:setPropertyActionListener value="#{dpr}" target="#{patientReportController.currentPatientReport}"></f:setPropertyActionListener>
+                                                                            </p:commandLink>
+
+                                                                            <p:graphicImage id="imgApproved" library="image" name="approved_icon.png" 
+                                                                                            style="height: 30px; width: 30px; #{dpr.approved ? '':'opacity: 0.1;'}" ></p:graphicImage>
+                                                                            <p:graphicImage id="imgPrinted" library="image" name="print_ok.png" 
+                                                                                            style="height: 30px; width: 30px;#{dpr.printed ? '':'opacity: 0.1;'}" ></p:graphicImage>
+                                                                        </h:panelGrid>
+
+
+                                                                        <p:tooltip for="imgApproved" >
+                                                                            <h:outputLabel value="Approved" styleClass="#{dpr.approved ? 'greentext':'yellowtext'}" >
+                                                                            </h:outputLabel>
+                                                                        </p:tooltip>
+                                                                        <p:tooltip for="imgPrinted" >
+                                                                            <h:outputLabel value="Printed" styleClass="#{dpr.approved ? 'greentext':'yellowtext'}" >
+                                                                            </h:outputLabel>
+                                                                        </p:tooltip>
+                                                                        <p:tooltip for="cmdOldReportPrint" >
+                                                                            <h:outputLabel value="To Print" styleClass="#{dpr.approved ? 'greentext':'yellowtext'}" >
+                                                                            </h:outputLabel>
+                                                                        </p:tooltip>
+
+
+
+                                                                    </h:column>
+                                                                </h:dataTable>
+
+
+                                                            </p:column>
+
+                                                        </p:dataTable>
                                                     </div>
                                                 </div>
-                                                
+
 
                                             </h:form>
 
